change font size, font-weight, and text content of h1 and h2, fix spacing of all sections

--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,8 @@ ul{
 #navbar {
     position: sticky;
     top: 0;
-    background-color: #354d4d;  
+    background-color: #354d4d; 
+    z-index: 99; 
 }
 #logo-home {
     display: flex;
@@ -48,6 +49,7 @@ ul.nav-list li a {
 ul.nav-list li a:hover {
     text-decoration: underline;
     color: #d29A5d;
+    box-shadow: #eadbcd;
 }
 
 ul.nav-list li ul.dropdown {
@@ -56,6 +58,7 @@ ul.nav-list li ul.dropdown {
     position: absolute;
     z-index: 999;
     left: 0;
+    background-color: #354d4d;
 }
 
 ul.nav-list li:hover ul.dropdown {
@@ -69,7 +72,7 @@ ul li ul.dropdown li {
 
 main {
     display: flex;
-    height: 50vh;
+    min-height: 50vh;
     align-items: center;
     justify-content: center;
     flex-direction: column;
@@ -82,10 +85,23 @@ main {
     color: #eadbcd;
 }
 
+#title-home {
+    font-size:60px;
+}
+
+.main-page h2{
+    font-size: 25px;
+}
+
+.contact-social li{
+    display: inline;
+    margin-top: 20px;
+    padding: 10px;
+}
 
 .about-section {
     background-color: #eadbcd;
-    height: 70vh;
+    min-height: 70vh;
     display: flex;
     flex-direction: column;
     align-content: center;
@@ -93,13 +109,14 @@ main {
     justify-content: center;
 }
 
-img.main-logo{
-    display: flex;
+.main-logo{
+    display: block;
     border: 1px black solid;
     height: 400px;
     width: 400px;
     border-top-left-radius:200px;
     border-top-right-radius:200px;
+    margin-top: -5%;
 }
 #about-text {
     padding: 10px;
@@ -109,45 +126,29 @@ img.main-logo{
 }
 
 #about-text p{
-    width: 65ch;
-    font-size: 18px;
+    font-size: 20px;
+    font-weight: 500;
+    word-wrap: break-word;
+}
+
+.works-page {
+    min-height: 100vh;
+    background-color: #f4ece7;
+}
+
+#works-title {
+    display: flex;
+    justify-content: center;
 }
 
 #card-container{
     display: flex;
     align-items: center;
     justify-content: center;
-}
-
-.contact-social{
-    display: flex;
-    align-items: baseline;
-    align-content: center;
-    justify-content: center;
-}
-
-.works-page {
-    display: flex;
-    display: flex;
-    align-content: center; 
-    align-items: flex-start;
-    justify-content: flex-start;
     justify-items: baseline;
-    height: 100vh;
-    background-color: #f4ece7;
 }
 
-.works-page h1 {
-    flex-direction: row;
-    color: #eadbcd;
-    background-color:#354d4d;
-   
-}
 
-#works-title h1{
-    height: 450px;
-    width: 300px;
-}
 
 #up-btn {
     display: none;
@@ -155,7 +156,8 @@ img.main-logo{
     bottom: 20px;
     right: 30px;
     z-index: 99;
-    color: #28242F;
-    background-color: #d29A5d;
+    color: #eadbcd;
+    background-color: #354d4d;
     border: none;
 }
+
